cursor changed to default on experience

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <!-- Right Side (Job Experience) -->
         <div class="w-full lg:w-1/2">
             
-            <div class="bg-white shadow-md p-5 rounded-lg border-l-4 border-teal-700 hover:scale-105 transition-transform">
+            <div class="bg-white shadow-md p-5 rounded-lg border-l-4 border-teal-700 hover:scale-105 cursor-default transition-transform">
                 <h3 class="text-xl font-semibold">Assistant IT Officer</h3>
                 <p class="text-gray-600 italic">Dundee City Council, Scotland, UK (2022-2024)</p>
                 <p class="mt-2 text-gray-800">
@@ -409,7 +409,7 @@
                 </p>
             </div>
 
-            <div class="bg-white shadow-md p-5 rounded-lg border-l-4 border-teal-700 mt-5 hover:scale-105 transition-transform"">
+            <div class="bg-white shadow-md p-5 rounded-lg border-l-4 border-teal-700 mt-5 hover:scale-105 cursor-default transition-transform"">
                 <h3 class="text-xl font-semibold">Web Development</h3>
                 <p class="text-gray-600 italic">Personal, Freelance</p>
                 <p class="mt-2 text-gray-800">
@@ -417,7 +417,7 @@
                 </p>
             </div>
 
-            <div class="bg-white shadow-md p-5 rounded-lg border-l-4 border-teal-700 mt-5 hover:scale-105 transition-transform"">
+            <div class="bg-white shadow-md p-5 rounded-lg border-l-4 border-teal-700 mt-5 hover:scale-105 cursor-default transition-transform"">
                 <h3 class="text-xl font-semibold">Kitchen Designer</h3>
                 <p class="text-gray-600 italic">Wren Kitchens, Dundee, UK</p>
                 <p class="mt-2 text-gray-800">
