added animations to certain hover effects

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </a>
             </div><!-- End of Mobile P's -->
             <!-- Desktop Projects -->
-            <div class="hidden lg:flex group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
+            <div class="hidden lg:flex group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50  ">
                 <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-black lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg">
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
@@ -141,14 +141,14 @@
                         Personal project to showcase my skills in HTML, CSS, and JavaScript. The site is a fan page for the Detroit Pistons NBA team which also utilises python scripts for automation and limiting usage of free APIS.
                     </p>
                     <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Javascript</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">NBA API</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>                    
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">HTML5</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">CSS3</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Javascript</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">NBA API</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Python</div></li>                    
                     </ul>
                 </div>
-                <img alt="Detroit Pistons Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/pistons-preview.jpg">
+                <img alt="Detroit Pistons Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700 group-hover:animate-pulse" style="color:transparent" src="img/pistons-preview.jpg">
             </div><!-- End of Desktop P's -->
         </li>
 
@@ -180,11 +180,11 @@
                         Personal project creating the classic Asteroids in Pygame. Can be played through this link or downloaded from my github, requires Python3 and Pygame to run if downloaded locally.
                     </p>
                     <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Pygame</div></li>                    
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Python</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Pygame</div></li>                    
                     </ul>
                 </div>
-                <img alt="Asteroids Game Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/asteroids.png">
+                <img alt="Asteroids Game Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700 group-hover:animate-pulse " style="color:transparent" src="img/asteroids.png">
             </div><!-- End of Desktop P's -->
         </li>
 
@@ -217,12 +217,12 @@
                         Portfolio website for an artist showing artwork and travel sketches written from scratch in HTML, CSS, and JavaScript. Updates to come.
                     </p>
                     <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">JavaScript</div></li>                   
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">HTML5</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">CSS3</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">JavaScript</div></li>                   
                     </ul>
                 </div>
-                <img alt="Artist Folio Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/artist-preview.jpg">
+                <img alt="Artist Folio Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700 group-hover:animate-pulse " style="color:transparent" src="img/artist-preview.jpg">
             </div><!-- End of Desktop P's -->
         </li>
 
@@ -254,11 +254,11 @@
                         Personal project to create a To Do List App using React.
                     </p>
                     <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">React</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>                    
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">React</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">CSS3</div></li>                    
                     </ul>
                 </div>
-                <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/todolist.jpg">
+                <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700 group-hover:animate-pulse " style="color:transparent" src="img/todolist.jpg">
             </div><!-- End of Desktop P's -->
         </li>
         
@@ -393,6 +393,9 @@
                     <span class="text-white text-lg font-bold flex items-center gap-2">
                         Click to Download
                     </span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="size-10 animate-bounce">
+                        <path fill-rule="evenodd" d="M12 2.25a.75.75 0 0 1 .75.75v11.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3a.75.75 0 0 1 .75-.75Zm-9 13.5a.75.75 0 0 1 .75.75v2.25a1.5 1.5 0 0 0 1.5 1.5h13.5a1.5 1.5 0 0 0 1.5-1.5V16.5a.75.75 0 0 1 1.5 0v2.25a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V16.5a.75.75 0 0 1 .75-.75Z" clip-rule="evenodd" />
+                    </svg>
                 </div>
             </a>
         </div>
