added messenger app to projects

--- a/index.html
+++ b/index.html
@@ -262,6 +262,44 @@
                 <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700 group-hover:animate-pulse " style="color:transparent" src="img/todolist.jpg">
             </div><!-- End of Desktop P's -->
         </li>
+
+        <!-- Messenger App -->
+        <li class="mb-12">
+            <!-- Mobile Projects -->
+             <div class="lg:hidden">
+                <h3 class="text-center text-2xl font-bold pb-2">Node Messenger App</h3>
+                <ul class="flex justify-center pb-2" aria-label="Technologies used:">
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Node.js</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Bootstrap</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">MongoDB</div></li>
+                </ul>
+                <a href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
+                    <img alt="To Do List App Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/todolist.jpg">
+                    </a>
+            </div><!-- End of Mobile P's -->
+            <!-- Desktop Projects -->
+            <div class="hidden lg:flex group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
+                <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-black lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg">
+                </div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                    <h3>
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
+                            <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
+                            <span>Messenger App<!-- --> <span class="inline-block">App<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
+                        </a> 
+                    </h3>
+                    <p class="hidden lg:flex mt-2 text-sm leading-normal group-hover:text-white">
+                        Personal project to create a Messenger App using Node.js.
+                    </p>
+                    <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Node.js</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Bootstrap</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">MongoDB</div></li>                                        
+                    </ul>
+                </div>
+                <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700 group-hover:animate-pulse " style="color:transparent" src="img/messenger-preview.jpg">
+            </div><!-- End of Desktop P's -->
+        </li>
         
         <!-- ADD AS WE CREATE   -->
     </ul>
