--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Bootstrap</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">MongoDB</div></li>
                 </ul>
-                <a href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
-                    <img alt="To Do List App Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/todolist.jpg">
+                <a href="https://github.com/SuperGoldenMan/messenger/" target="_blank" rel="noreferrer noopener" aria-label="messenger">
+                    <img alt="To Do List App Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/messenger-preview.jpg">
                     </a>
             </div><!-- End of Mobile P's -->
             <!-- Desktop Projects -->
@@ -283,7 +283,7 @@
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
                     <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/messenger/" target="_blank" rel="noreferrer noopener" aria-label="messenger">
                             <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
                             <span>Messenger<!-- --> <span class="inline-block">App<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
                         </a> 
