changed description of some projects

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Javascript</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">NBA API</div></li>
-                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li> 
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Github Actions</div></li>
                 </ul>
                 <a href="https://supergoldenman.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
                     <img alt="Detroit Pistons Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/pistons-preview.jpg">
@@ -139,14 +140,15 @@
                         </a> 
                     </h3>
                     <p class="hidden lg:flex mt-2 text-sm leading-normal group-hover:text-white">
-                        Personal project to showcase my skills in HTML, CSS, and JavaScript. The site is a fan page for the Detroit Pistons NBA team which also utilises python scripts for automation and limiting usage of free APIS.
+                        Personal project to showcase my skills in HTML, CSS, and JavaScript. The site is a fan page for the Detroit Pistons NBA team which also utilises Python scripts and Github Actions for automation and limiting usage of free APIS.
                     </p>
                     <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">HTML5</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">CSS3</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Javascript</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">NBA API</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Python</div></li>                    
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Python</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 group-hover:animate-bounce">Github Actions</div></li>              
                     </ul>
                 </div>
                 <img alt="Detroit Pistons Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700 group-hover:animate-pulse" style="color:transparent" src="img/pistons-preview.jpg">
@@ -397,16 +399,17 @@
         <div class="bar intermediate" data-skill="JavaScript"></div>
         <div class="bar intermediate" data-skill="jQuery"></div>
         <div class="bar basic" data-skill="Tailwind CSS"></div>
-        <div class="bar learning" data-skill="React"></div>   
+        <div class="bar basic" data-skill="React"></div>   
     </div>
 
     <div id="backend" class="container hidden">
         <h1 class="justify-center text-center p-5 text-xl">Back-End-Development</h1>
         <div class="bar expert" data-skill="PHP"></div>
         <div class="bar advanced" data-skill="Linux"></div>
-        <div class="bar intermediate" data-skill="Python"></div>
+        <div class="bar advanced" data-skill="Python"></div>
+        <div class="bar intermediate" data-skill="Node.js"></div>
         <div class="bar intermediate" data-skill="SQL"></div>
-        <div class="bar basic" data-skill="Git"></div>  
+        <div class="bar intermediate" data-skill="Git"></div>
     </div>
 
     <div id="customer" class="container hidden">
