changed profile to parallax

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <!-- Right Column -->
         <div id="right-column" class="hidden lg:flex w-1/2 flex justify-center items-center">
-            <img class="rounded-full w-100 h-100 object-cover border-2 border-gray-300" src="img/portrait.png" alt="Portrait of Sean Anderson">
+            <img id="floating-portrait" class="sticky top-24 w-3/4 h-3/4 object-contain rounded-full mx-auto pt-5 shadow-md shadow-teal-700 bg-[url(img/tealbackground3.jpg)] bg-fixed bg-cover bg-center bg-no-repeat items-center justify-center" src="img/profile.png" alt="Transparent Portrait of Sean Anderson">
         </div>
     </div>
 </div><!-- Home -->
